syntax = "proto3";

package tracking_pipeline.online;
option go_package = "./.gen";
import "common.proto";
import "online_tracking_results.proto";
import "event.proto";

service EvtService {
  rpc EvtProcess(EvtProcessRequest) returns (EvtProcessResponse);
}

message EvtProcessRequest {
  repeated Tracks input_tracks = 1;
  int64 start_time = 2;
  int64 end_time = 3;
  map<string, CidInfo> cid_info = 4;
  map<string, NppResult> npp_results = 5;
}

message EvtProcessResponse {
  map<string, int64> cid_end_time = 1;
  repeated OnlineEvent events = 2;
  repeated RegionStatistics region_stats = 3;
  repeated Trajectory trajectories = 4;
  repeated RegionStatistics synced_stats = 5;
  repeated Trajectory synced_trajactories = 6;
}
